--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -226,8 +226,14 @@ canvas{
 .charts{
   display: none;
 }
-
-textarea{
-  width:100%;
-  height:200px;
+.currency{
+  color: darkred;
+}
+h3{
+  font-weight: normal;
+  color: rgba(0, 0, 0, 0.72);
+}
+th{
+  font-weight: normal;
+  color: green;
 }
